--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+*.js linguist-vendored=false
+*.ts linguist-vendored=false
+*.html linguist-detectable=true
+*.scss linguist-detectable=true
